--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,6 @@ description = "Write Freely, Publish Instantly."
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "ctkmessagebox>=2.7",
     "customtkinter>=5.2.2",
 ]
