--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,6 @@ requires-python = ">=3.13"
 dependencies = [
     "ctkmessagebox>=2.7",
     "customtkinter>=5.2.2",
+    "pygithub>=2.6.1",
     "pyinstaller>=6.14.0",
 ]
