--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Write Freely, Publish Instantly."
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "markdown>=3.8.2",
     "pygithub>=2.6.1",
     "pyinstaller>=6.14.0",
     "pyqt6>=6.9.1",
